Update The Solar System.html

--- a/The Solar System.html
+++ b/The Solar System.html
@@ -68,14 +68,13 @@
 <body>
 
   <div class="top-menu">
-       </a>
+               <a href="https://mrniftyfire.github.io/My-Solar-System/The%20Solar%20System.html">
+      <img src="Stars (Small).png" alt="Stars">
+      Home
+    </a>
     <a href="https://mrniftyfire.github.io/Four-First-Planets/First%20Four%20Planets.html">
       <img src="Mercury (Small).jpg" alt="First Four Planets">
       First Four Planets
-    </a>
-        <a href="https://mrniftyfire.github.io/Lego-Stop-Motion/Lego%20Stop-Motion.html">
-      <img src="LEGA (Small).png" alt="LEGA">
-      LEGO
     </a>
     <a href="https://mrniftyfire.github.io/Roblox-Site/Roblox.html">
       <img src="Roblox (Small).png" alt="Roblox">
